--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
         "laravel-shift/blueprint": "^2.3",
+        "laravel/breeze": "^1.10",
         "laravel/homestead": "^13.2",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
