--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "twilio/sdk": "^6.36"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.7",
         "fakerphp/faker": "^1.9.1",
         "laravel-shift/blueprint": "^2.3",
         "laravel/breeze": "^1.10",
