working on form submit for chat text

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^9.11",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
+        "sendgrid/sendgrid": "^8.0",
         "twilio/sdk": "^6.36"
     },
     "require-dev": {
