--- a/composer.json
+++ b/composer.json
@@ -12,19 +12,17 @@
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
         "sendgrid/sendgrid": "^8.0",
-        "twilio/sdk": "^6.36"
+        "twilio/sdk": "^6.36",
+        "rap2hpoutre/laravel-log-viewer": "^2.2"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.7",
         "fakerphp/faker": "^1.9.1",
         "laravel-shift/blueprint": "^2.3",
         "laravel/breeze": "^1.10",
-        "laravel/homestead": "^13.2",
-        "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.5.10",
-        "rap2hpoutre/laravel-log-viewer": "^2.2",
         "spatie/laravel-ignition": "^1.0"
     },
     "autoload": {
