--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "laravel/framework": "^9.11",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
-        "rap2hpoutre/laravel-log-viewer": "^2.2",
+        "opcodesio/log-viewer": "^1.4",
         "sendgrid/sendgrid": "^8.0",
         "twilio/sdk": "^6.36"
     },
