--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
         "laravel/tinker": "^2.7",
         "opcodesio/log-viewer": "^1.4",
         "sendgrid/sendgrid": "^8.0",
+        "spatie/laravel-backup": "^8.1",
+        "spatie/laravel-responsecache": "^7.4",
         "twilio/sdk": "^6.36"
     },
     "require-dev": {
