--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "opcodesio/log-viewer": "^1.4",
         "sendgrid/sendgrid": "^8.0",
         "spatie/laravel-backup": "^8.1",
+        "spatie/laravel-model-flags": "^1.0",
         "spatie/laravel-responsecache": "^7.4",
         "twilio/sdk": "^6.36"
     },
