--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "fakerphp/faker": "^1.9.1",
         "laravel-shift/blueprint": "^2.3",
         "laravel/breeze": "^1.10",
+        "laravel/telescope": "^4.14",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.5.10",
