--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
         "opcodesio/log-viewer": "^1.4",
+        "power-components/livewire-powergrid": "^4.4",
         "sendgrid/sendgrid": "^8.0",
         "spatie/laravel-backup": "^8.1",
         "spatie/laravel-model-flags": "^1.0",
