--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "spatie/laravel-backup": "^8.1",
         "spatie/laravel-model-flags": "^1.0",
         "spatie/laravel-responsecache": "^7.4",
+        "spatie/laravel-welcome-notification": "^2.3",
         "twilio/sdk": "^6.36"
     },
     "require-dev": {
