added more fields (but haven't tested anything)

--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.5.10",
-        "spatie/laravel-ignition": "^1.0"
+        "spatie/laravel-ignition": "^1.0",
+        "wnx/laravel-stats": "^2.11"
     },
     "autoload": {
         "files": [
