--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,12 @@
         "guzzlehttp/guzzle": "^7.2",
         "jenssegers/agent": "^2.6",
         "laravel/framework": "^9.11",
+        "laravel/horizon": "^5.16",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
         "opcodesio/log-viewer": "^1.4",
         "power-components/livewire-powergrid": "^4.4",
+        "predis/predis": "^2.1",
         "sendgrid/sendgrid": "^8.0",
         "spatie/laravel-backup": "^8.1",
         "spatie/laravel-model-flags": "^1.0",
