--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
+            "Database\\Seeders\\": "database/seeders/",
+            "ArchTech\\Enums\\": "app/Vendor/ArchTech/Enums/"
         }
     },
     "autoload-dev": {
