--- a/.env-example
+++ b/.env-example
@@ -12,6 +12,7 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=
+DB_DATABASE_TEST=
 DB_USERNAME=
 DB_PASSWORD=
 DB_TABLE_PREFIX=meto_
