--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/horizon": "^5.16",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
+        "maatwebsite/excel": "^3.1",
         "opcodesio/log-viewer": "^1.4",
         "power-components/livewire-powergrid": "^4.4",
         "predis/predis": "^2.1",
