--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.7",
         "barryvdh/laravel-ide-helper": "^2.12",
+        "beyondcode/laravel-prose-linter": "^3.1",
         "fakerphp/faker": "^1.9.1",
         "laravel-shift/blueprint": "^2.3",
         "laravel/breeze": "^1.10",
