--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
         "bugsnag/bugsnag-laravel": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
         "jenssegers/agent": "^2.6",
-        "laravel/framework": "^9.11",
+        "laravel/framework": "^10.0",
         "laravel/horizon": "^5.16",
-        "laravel/sanctum": "^2.14.1",
+        "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.7",
         "maatwebsite/excel": "^3.1",
         "opcodesio/log-viewer": "^1.4",
@@ -36,7 +36,7 @@
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.5.10",
-        "spatie/laravel-ignition": "^1.0",
+        "spatie/laravel-ignition": "^2.0",
         "wnx/laravel-stats": "^2.11"
     },
     "autoload": {
@@ -80,6 +80,6 @@
         "preferred-install": "dist",
         "sort-packages": true
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
