--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "sendgrid/sendgrid": "^8.0",
         "spatie/laravel-backup": "^8.1",
         "spatie/laravel-model-flags": "^1.0",
+        "spatie/laravel-ray": "^1.32",
         "spatie/laravel-responsecache": "^7.4",
         "spatie/laravel-welcome-notification": "^2.3",
         "twilio/sdk": "^6.36"
