--- a/.env-example
+++ b/.env-example
@@ -25,19 +25,12 @@ SESSION_DRIVER=database
 SESSION_LIFETIME=120 #minutes
 
 MAIL_MAILER=smtp
-#MAIL_DRIVER=sendgrid
-MAIL_HOST=smtp.sendgrid.com
-MAIL_PORT=587
-MAIL_USERNAME=apikey
-MAIL_PASSWORD=
-MAIL_ENCRYPTION=''
+MAIL_HOST=localhost
+MAIL_PORT=1025
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
+MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="info@meto-intl.org"
 MAIL_FROM_NAME="${APP_NAME}"
-SENDGRID_API_KEY=
 
-TWILIO_SID=
-TWILIO_AUTH_TOKEN=
-TWILIO_WHATSAPP_NUMBER=
-
-GOOGLE_DB_PASSWORD=
 
