--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.7",
         "maatwebsite/excel": "^3.1",
+        "mbezhanov/faker-provider-collection": "^2.0",
         "opcodesio/log-viewer": "^1.4",
         "power-components/livewire-powergrid": "^4.4",
         "predis/predis": "^2.1",
