--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.1",
         "archtechx/enums": "^0.3.0",
         "bugsnag/bugsnag-laravel": "^2.0",
+        "egulias/email-validator": "^4.0",
         "guzzlehttp/guzzle": "^7.2",
         "jenssegers/agent": "^2.6",
         "laravel/framework": "^10.0",
